--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,12 @@
   height: 100vh;
 }
 
+.main-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 40px;
+}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
